# substreams-eth-balance-changes

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  substreams.yaml
proto/v1/: eth.proto
src/: lib.rs  maps.rs
src/pb/: eth.types.v1.rs  mod.rs
