[package]
name = "eth"
version = "1.0.0"
description = "ETH Balance Changes"
edition = "2021"
authors = [
    "Matthieu Vachon <https://github.com/maoueh>",
    "Colin Dickson <https://github.com/colindicksonll>",
]

[lib]
crate-type = ["cdylib"]

[dependencies]
ethabi = "18.0"
hex = "0.4.3"
hex-literal = "0.3"
prost = "0.11"
prost-types = "0.11"
num-bigint = "0.4"
substreams = "0.5"
substreams-ethereum = "0.9"
num-traits = "0.2.16"
